@@ -272,6 +272,7 @@ To recursively watch a directory for changes (2 ways to express):
 .I /etc/audit/audit.rules
 
 .SH "SEE ALSO"
+.BR audit.rules (7),
 .BR auditd (8).
 
 .SH AUTHOR
