@@ -61,7 +61,8 @@ The audit daemon can receive audit events from other audit daemons via the audis
 .BR audispd (8),
 .BR ausearch (8),
 .BR aureport (8),
-.BR auditctl (8).
+.BR auditctl (8),
+.BR audit.rules (7).
 
 .SH AUTHOR
 Steve Grubb
